[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-ml"
dynamic = ["version"]
description = 'Demo machine learning Python projects'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "t63065488", email = "t63065488@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/python-ml#readme"
Issues = "https://github.com/unknown/python-ml/issues"
Source = "https://github.com/unknown/python-ml"

[tool.hatch.version]
path = "src/python_ml/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/python_ml tests}"

[tool.coverage.run]
source_pkgs = ["python_ml", "tests"]
branch = true
parallel = true
omit = [
  "src/python_ml/__about__.py",
]

[tool.coverage.paths]
python_ml = ["src/python_ml", "*/python-ml/src/python_ml"]
tests = ["tests", "*/python-ml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
